More Harmony combobox/textfield updates:

Textfields:
- handle disabled state for text, border

Comboboxes:
- update enabled text color (matches textfield)
- handle disabled state for text, arrow, border (matches textfield)
- draw a solid background so that subpixel aa works

BUG=644709,635164,635160

Review-Url: https://codereview.chromium.org/2319193002
Cr-Commit-Position: refs/heads/master@{#417093}

Former-commit-id: 535dfe7eacd0c1ac003859cf18a81297f508ad5a