ui/views/examples/textfield_example.h
@@ -44,6 +44,7 @@ class VIEWS_EXAMPLES_EXPORT TextfieldExample : public ExampleBase,
   // Textfields for name and password.
   Textfield* name_;
   Textfield* password_;
+  Textfield* disabled_;
   Textfield* read_only_;
 
   // Various buttons to control textfield.
